# mnemostack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROPOSAL-bm25-language-analyzer.md  PROPOSAL-cross-encoder-reranker.md  README.md  SECURITY.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: .gitignore  README.md  download_locomo.sh  error_analysis.py  focused_rerun.py  locomo_compare.py  locomo_compare_results.json  locomo_single.py  run_locomo.sh  synthetic_longhorizon.py
docs/: comparison.md  deployment.md  mcp.md
examples/: basic_embedding.py  docker-compose.yml  quickstart.md
examples/notes/: README.md
integrations/: README.md
integrations/claude-code/: SKILL.md
integrations/cursor/: SKILL.md
integrations/openclaw/: SKILL.md
openclaw-plugin/: MIGRATION.md  README.md  index.js  openclaw.plugin.json  package.json
openclaw-plugin/src/: cache.js  config.js  inflight.js  injection.js  logging.js  plugin.js  strip-envelope.js  triggers.js
openclaw-plugin/src/backends/: http.js  script.js
openclaw-plugin/test/: auto-recall.test.js
src/memvault/: __init__.py  cli.py
src/memvault/embeddings/: __init__.py  gemini.py  huggingface.py  registry.py
src/memvault/llm/: __init__.py  base.py  gemini.py  ollama.py
src/memvault/recall/: __init__.py  bm25.py  fusion.py
src/memvault/vector/: __init__.py  qdrant.py
src/mnemostack/: __init__.py  cli.py  config.py  feedback.py  ingest.py  logging_config.py  mcp_models.py  reranker_cache.py  retriever_base.py  server.py  synthesis.py
src/mnemostack/chunking/: __init__.py  base.py  char.py  markdown.py  messages.py  paragraph.py
src/mnemostack/consolidation/: __init__.py  phases.py  runtime.py
src/mnemostack/embeddings/: __init__.py  base.py  gemini.py  huggingface.py  ollama.py  registry.py
src/mnemostack/graph/: __init__.py  extractor.py  store.py
src/mnemostack/llm/: __init__.py  base.py  gemini.py  ollama.py  registry.py
src/mnemostack/mcp/: __init__.py  server.py
src/mnemostack/observability/: __init__.py  recorder.py
src/mnemostack/recall/: __init__.py  answer.py  bm25.py  corpus.py  expansion.py  filters.py  flow.py  followup.py  fusion.py  inference_retry.py  mca_prefilter.py  query_expansion.py  recaller.py  render.py  reranker.py  retrievers.py  scoring_reranker.py  specificity.py  trace.py
src/mnemostack/recall/pipeline/: __init__.py  base.py  presets.py  resurrection.py  stages.py  state.py
src/mnemostack/utils/: __init__.py  text.py
src/mnemostack/vector/: __init__.py  async_qdrant.py  qdrant.py
tests/: test_adaptive_dampening.py  test_adaptive_weights.py  test_answer.py  test_answer_generator_category.py  test_answer_generator_list_extract.py  test_async_vector.py  test_bm25_from_qdrant.py  test_chunking.py  test_cli_enrich.py  test_cli_index_idempotent.py  test_cli_recreate_confirm.py  test_cli_tiers.py  test_confidence_decay.py  test_config.py  test_consolidation.py  test_date_query_parsing.py  test_embeddings.py  test_extractor.py  test_fallback.py  test_feedback_surfaces.py  test_followup.py  test_fusion_weights.py  test_gemini_vision.py  test_graph.py  test_graph_resurrection.py  test_hyde_retriever.py  test_inference_retry.py  test_ingest.py  test_ingest_wrappers.py  test_logging.py  test_mca_prefilter.py  test_mcp.py  test_mcp_validation.py  test_messages_chunker.py  test_multihop_classifier.py  test_observability.py  test_ollama_think.py  test_ollama_vision.py  test_pipeline.py  test_prompt_overrides.py  (+22 more)
